# ChangeLog for x11-libs/gtk+
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.776 2015/04/25 18:40:54 tetromino Exp $

  25 Apr 2015; Alexandre Rostovtsev <tetromino@gentoo.org> gtk+-2.24.27.ebuild,
  gtk+-2.24.27-r1.ebuild, gtk+-3.14.9.ebuild, gtk+-3.14.10.ebuild:
  Add librsvg[${MULTILIB_USEDEP}] to pdepend to ensure normal icon themes
  (png/svg) can always be loaded (bug #547710, thanks to haarp and nE0sIghT).

  29 Mar 2015; Jeroen Roovers <jer@gentoo.org> gtk+-2.24.27.ebuild,
  gtk+-3.14.9.ebuild:
  Stable for HPPA (bug #534012).

*gtk+-3.14.10 (28 Mar 2015)

  28 Mar 2015; Pacho Ramos <pacho@gentoo.org> +gtk+-3.14.10.ebuild:
  Version bump

*gtk+-2.24.27-r1 (20 Mar 2015)

  20 Mar 2015; Pacho Ramos <pacho@gentoo.org> +gtk+-2.24.27-r1.ebuild:
  Sync gtkrc with settings.ini from gtk3 and default values from other
  distdistributions. Readd ~arm64 as looks like it was lost at some point by
  error.

  20 Mar 2015; Pacho Ramos <pacho@gentoo.org> -gtk+-2.24.26.ebuild:
  Drop old

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gtk+-2.24.27.ebuild,
  gtk+-3.14.9.ebuild:
  x86 stable, bug 534012

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gtk+-2.24.27.ebuild,
  gtk+-3.14.9.ebuild:
  ppc64 stable, bug 534012

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> gtk+-2.24.27.ebuild,
  gtk+-3.14.9.ebuild:
  ppc stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> gtk+-2.24.27.ebuild,
  gtk+-3.14.9.ebuild:
  amd64 stable, bug 534012

*gtk+-2.24.27 (07 Mar 2015)

  07 Mar 2015; Pacho Ramos <pacho@gentoo.org> +gtk+-2.24.27.ebuild,
  -gtk+-3.14.8.ebuild:
  Version bump, drop old

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> gtk+-3.14.8.ebuild:
  add arm64 support, tested on A53 board

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> gtk+-2.24.25-r1.ebuild:
  add arm64 support, tested on A53 board

*gtk+-3.14.9 (26 Feb 2015)
